log
Thu Apr 30 08:05:32 PM UTC 2026: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘firstTreeMap’:
treemap.c:106:21: error: invalid initializer
  106 |     TreeNode temp = tree -> root;
      |                     ^~~~
treemap.c:107:16: error: invalid type argument of ‘->’ (have ‘TreeNode’)
  107 |     while(temp -> left != NULL){
      |                ^~
treemap.c:108:21: error: invalid type argument of ‘->’ (have ‘TreeNode’)
  108 |         temp = temp -> left;
      |                     ^~
23f70eb
Thu Apr 30 08:05:59 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/60
cbfafe2
Thu Apr 30 08:23:09 PM UTC 2026: 
 treemap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:129:12: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Wincompatible-pointer-types]
  129 |     return temp;
      |            ^~~~
1774bd4
Thu Apr 30 08:23:42 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 8/60
b04e994
Thu Apr 30 08:27:19 PM UTC 2026: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:124:12: error: ‘tamp’ undeclared (first use in this function); did you mean ‘temp’?
  124 |         if(tamp -> left != NULL){
      |            ^~~~
      |            temp
treemap.c:124:12: note: each undeclared identifier is reported only once for each function it appears in
a0adf2a
Thu Apr 30 08:27:31 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 8/60
4a8ab5c
Thu Apr 30 08:29:34 PM UTC 2026: 
 treemap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  0|0
d5c5bd1
Thu Apr 30 08:37:52 PM UTC 2026: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  5|7
total_score: 8/60
493767e
Thu Apr 30 08:38:23 PM UTC 2026: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
c78a69d
Thu Apr 30 08:39:36 PM UTC 2026: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:134:1: error: expected ‘;’ before ‘}’ token
  134 | }
      | ^
bd8a1d2
Thu Apr 30 08:39:46 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|7
total_score: 5/60
f1f5339
Thu Apr 30 08:41:55 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|7
total_score: 11/60
882a260
Thu Apr 30 08:42:58 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|7
total_score: 11/60
4c7cf6d
